force-app/main/default/objects/Jobs__x/fields/Compensation_frequency__c.field-meta.xml
<CustomField>
    <fullName>Compensation_frequency__c</fullName>
    <description>Compensation_frequency</description>
    <externalDeveloperName>Compensation_frequency</externalDeveloperName>
    <label>Compensation Frequency</label>
    <length>128</length>
    <type>Text</type>
</CustomField>