force-app/main/default/objects/Jobs__x/fields/Mid_point_salary__c.field-meta.xml
<CustomField>
    <fullName>Mid_point_salary__c</fullName>
    <description>Mid_point_salary</description>
    <externalDeveloperName>Mid_point_salary</externalDeveloperName>
    <label>Mid-Point Salary</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>