force-app/main/default/objects/Jobs__x/fields/Minimum_salary__c.field-meta.xml
<CustomField>
    <fullName>Minimum_salary__c</fullName>
    <description>Minimum_salary</description>
    <externalDeveloperName>Minimum_salary</externalDeveloperName>
    <label>Minimum Salary</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>