force-app/main/default/objects/Jobs__x/fields/Standard_work_period__c.field-meta.xml
<CustomField>
    <fullName>Standard_work_period__c</fullName>
    <description>Standard_work_period</description>
    <externalDeveloperName>Standard_work_period</externalDeveloperName>
    <label>Standard Work Period</label>
    <length>128</length>
    <type>Text</type>
</CustomField>